# packages/loopring-sdk/src/lib/openapi/models/NftMakerOrder.ts
@@ -13,18 +13,18 @@
  */
 
 import { exists, mapValues } from '../runtime';
-import type { NftOrderErc20Token } from './NftOrderErc20Token';
+import type { NftTokenAmountInfo } from './NftTokenAmountInfo';
 import {
-    NftOrderErc20TokenFromJSON,
-    NftOrderErc20TokenFromJSONTyped,
-    NftOrderErc20TokenToJSON,
-} from './NftOrderErc20Token';
-import type { NftOrderNftToken } from './NftOrderNftToken';
+    NftTokenAmountInfoFromJSON,
+    NftTokenAmountInfoFromJSONTyped,
+    NftTokenAmountInfoToJSON,
+} from './NftTokenAmountInfo';
+import type { TokenAmountInfo } from './TokenAmountInfo';
 import {
-    NftOrderNftTokenFromJSON,
-    NftOrderNftTokenFromJSONTyped,
-    NftOrderNftTokenToJSON,
-} from './NftOrderNftToken';
+    TokenAmountInfoFromJSON,
+    TokenAmountInfoFromJSONTyped,
+    TokenAmountInfoToJSON,
+} from './TokenAmountInfo';
 
 /**
  * 
@@ -52,16 +52,16 @@ export interface NftMakerOrder {
     storageId: number;
     /**
      * 
-     * @type {NftOrderNftToken}
+     * @type {NftTokenAmountInfo}
      * @memberof NftMakerOrder
      */
-    sellToken: NftOrderNftToken;
+    sellToken: NftTokenAmountInfo;
     /**
      * 
-     * @type {NftOrderErc20Token}
+     * @type {TokenAmountInfo}
      * @memberof NftMakerOrder
      */
-    buyToken: NftOrderErc20Token;
+    buyToken: TokenAmountInfo;
     /**
      * allOrNone
      * @type {boolean}
@@ -132,8 +132,8 @@ export function NftMakerOrderFromJSONTyped(json: any, ignoreDiscriminator: boole
         'exchange': json['exchange'],
         'accountId': json['accountId'],
         'storageId': json['storageId'],
-        'sellToken': NftOrderNftTokenFromJSON(json['sellToken']),
-        'buyToken': NftOrderErc20TokenFromJSON(json['buyToken']),
+        'sellToken': NftTokenAmountInfoFromJSON(json['sellToken']),
+        'buyToken': TokenAmountInfoFromJSON(json['buyToken']),
         'allOrNone': json['allOrNone'],
         'fillAmountBOrS': json['fillAmountBOrS'],
         'validUntil': json['validUntil'],
@@ -155,8 +155,8 @@ export function NftMakerOrderToJSON(value?: NftMakerOrder | null): any {
         'exchange': value.exchange,
         'accountId': value.accountId,
         'storageId': value.storageId,
-        'sellToken': NftOrderNftTokenToJSON(value.sellToken),
-        'buyToken': NftOrderErc20TokenToJSON(value.buyToken),
+        'sellToken': NftTokenAmountInfoToJSON(value.sellToken),
+        'buyToken': TokenAmountInfoToJSON(value.buyToken),
         'allOrNone': value.allOrNone,
         'fillAmountBOrS': value.fillAmountBOrS,
         'validUntil': value.validUntil,
