# packages/loopring-sdk/src/lib/openapi/models/NftTokenAmountInfo.ts
@@ -16,27 +16,33 @@ import { exists, mapValues } from '../runtime';
 /**
  * 
  * @export
- * @interface TokenAmountInfo
+ * @interface NftTokenAmountInfo
  */
-export interface TokenAmountInfo {
+export interface NftTokenAmountInfo {
     /**
-     * The Loopring's ERC20 token identifier.
+     * the Loopring's NFT token identifier
      * @type {number}
-     * @memberof TokenAmountInfo
+     * @memberof NftTokenAmountInfo
      */
     tokenId: number;
     /**
-     * The amount of the ERC20 token
+     * the Loopring's NFT token data identifier which is a hash string of NFT token address and NFT_ID
      * @type {string}
-     * @memberof TokenAmountInfo
+     * @memberof NftTokenAmountInfo
+     */
+    nftData?: string;
+    /**
+     * the amount of the NFT token
+     * @type {string}
+     * @memberof NftTokenAmountInfo
      */
     amount: string;
 }
 
 /**
- * Check if a given object implements the TokenAmountInfo interface.
+ * Check if a given object implements the NftTokenAmountInfo interface.
  */
-export function instanceOfTokenAmountInfo(value: object): boolean {
+export function instanceOfNftTokenAmountInfo(value: object): boolean {
     let isInstance = true;
     isInstance = isInstance && "tokenId" in value;
     isInstance = isInstance && "amount" in value;
@@ -44,22 +50,23 @@ export function instanceOfTokenAmountInfo(value: object): boolean {
     return isInstance;
 }
 
-export function TokenAmountInfoFromJSON(json: any): TokenAmountInfo {
-    return TokenAmountInfoFromJSONTyped(json, false);
+export function NftTokenAmountInfoFromJSON(json: any): NftTokenAmountInfo {
+    return NftTokenAmountInfoFromJSONTyped(json, false);
 }
 
-export function TokenAmountInfoFromJSONTyped(json: any, ignoreDiscriminator: boolean): TokenAmountInfo {
+export function NftTokenAmountInfoFromJSONTyped(json: any, ignoreDiscriminator: boolean): NftTokenAmountInfo {
     if ((json === undefined) || (json === null)) {
         return json;
     }
     return {
         
         'tokenId': json['tokenId'],
+        'nftData': !exists(json, 'nftData') ? undefined : json['nftData'],
         'amount': json['amount'],
     };
 }
 
-export function TokenAmountInfoToJSON(value?: TokenAmountInfo | null): any {
+export function NftTokenAmountInfoToJSON(value?: NftTokenAmountInfo | null): any {
     if (value === undefined) {
         return undefined;
     }
@@ -69,6 +76,7 @@ export function TokenAmountInfoToJSON(value?: TokenAmountInfo | null): any {
     return {
         
         'tokenId': value.tokenId,
+        'nftData': value.nftData,
         'amount': value.amount,
     };
 }
