# packages/loopring-sdk/src/lib/openapi/models/index.ts
@@ -16,10 +16,10 @@ export * from './MetadataExtra';
 export * from './MetadataImageSize';
 export * from './NFTMintRequestV3';
 export * from './NextStorageIdInfo';
+export * from './NftDataInfo';
 export * from './NftMakerOrder';
-export * from './NftOrderErc20Token';
-export * from './NftOrderNftToken';
 export * from './NftTakerOrder';
+export * from './NftTokenAmountInfo';
 export * from './NftTradeFill';
 export * from './OffchainFeeInfo';
 export * from './PendingBalance';
@@ -33,6 +33,7 @@ export * from './TokenAmountInfo';
 export * from './TokenFeeInfo';
 export * from './TradeNftRequest';
 export * from './TradeNftResponse';
+export * from './TransferNftRequest';
 export * from './TxHashInfo';
 export * from './UnlockAssetRequest';
 export * from './UserApiKey';
